<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"mPASS"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">"mPASS - Map"</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="btn_profilo">Profile</string>
    <string name="btn_foursquare">Connect to Foursquare</string>
    <string name="title">"mPASS"</string>
    <string name="load_map">Open Map</string>
    <string name="nearby_venues">Locate nearby venues</string>
    <string name="hello">Hello world!</string>

    <!-- Nuovo Profilo -->
    <string name="welcome">Welcome to mPASS!</string>
    <string name="logo_descr">Logo di mPASS</string>
    <string name="create">You can choose to create your profile&#8230;</string>
    <string name="lbl_user">Username</string>
    <string name="anon">&#8230;or stay anonymous!</string>
    <string name="confirm">Save profile</string>
    <string name="btnanon">Stay anonymous</string>
    <string name="userimg_description">Immagine del profilo</string>
    <string name="btn_modifyimage">modify</string>
    <string name="tv_example">Ex: Mario Rossi</string>
    <string name="btn_regfsq">Login with Foursquare</string>
    <string name="btn_createprofile">Create a new profile</string>

    <!-- Profilo -->
    <string name="tv_pref">Preferences</string>
    <string name="btn_gaps">GAPS</string>
    <string name="btn_cross">CROSS</string>
    <string name="btn_obstruction">OBSTRUCTION</string>
    <string name="btn_parking">PARKING</string>
    <string name="btn_surface">SURFACE</string>
    <string name="btn_pathway">PATHWAY</string>
    <string name="tv_log">Log</string>
    <string name="tv_unknown">Unknown</string>
    <string name="tv_reports">Number of reports: 13</string>
    <string name="tv_user">User</string>

    <string-array name="drawer_menu">
        <item>Home</item>
        <item>Visualizza mappa</item>
        <item>Profilo</item>
    </string-array>

    <string name="location">Current location:</string>
    <string name="submit">Submit</string>
    <string name="title_activity_quiz">Report</string>
    <string name="title_activity_profile">mPASS - Profile</string>
    <string name="Escalators">Escalators</string>
    <string name="title_activity_new_profile">mPASS</string>
    <string name="accessibilitylvl">Accessibility Level</string>
    <string name="title_activity_log_test">LogTest</string>
    <string name="title_activity_splash">mPASS</string>
    <string name="title_activity_welcome">mPASS - Welcome!</string>
    <string name="btn_savepref">Save preferences</string>
    <string name="title_activity_nearby">mPASS - Nearby Venues</string>
    <string name="title_activity_new_venue">mPASS - New Venue</string>
    <string name="title_activity_venue_list">mPASS - Venue List</string>
    <string name="title_activity_user_settings">mPASS - Modify Profile</string>
    
    <string name="menu_refresh">Refresh Map</string>
	<string name="menu_filter">Filter for Map</string>
    <string name="menu_profile">User Profile</string>
    <string name="menu_list">List of Venues</string>
    
</resources>
