<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_refresh"
        android:icon="@drawable/ic_refresh" 
        android:title="@string/menu_refresh" 
        android:showAsAction="always">
    </item>
    
    <item
        android:id="@+id/item_filter"
        android:icon="@drawable/ic_filter" 
        android:title="@string/menu_filter" 
        android:showAsAction="always">
    </item>
    
    <item
        android:id="@+id/item_mapmenu"
        android:icon="@drawable/ic_profile" 
        android:title="@string/menu_profile" 
        android:showAsAction="always">
        
    </item>
    
    <item
        android:id="@+id/item_list"
        android:icon="@drawable/ic_menu" 
        android:title="@string/menu_list" 
        android:showAsAction="always">
        
    </item>
    
</menu>
