<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_height="fill_parent"
    android:layout_width="fill_parent" 
    android:id="@+id/scrollView3">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewProfileActivity" >

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome"
        android:layout_marginTop="10dp"
        android:text="@string/create"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@id/tv_create"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_background"
        android:contentDescription="@string/userimg_description"
        android:padding="3dp"
        android:scaleType="fitXY"
        android:src="@drawable/user" />

    <Button
        android:id="@+id/btn_image"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:background="#22000000"
        android:text="@string/btn_modifyimage"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_image"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/lbl_user"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:hint="@string/tv_example"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_anon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_user"
        android:layout_marginTop="25dp"
        android:text="@string/anon"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_anon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/btn_confirmprofile"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/btn_anon"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginLeft="75dp"
            android:layout_toRightOf="@id/btn_confirmprofile"
            android:text="@string/btnanon" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_create"
        android:layout_toRightOf="@+id/relativeLayout1"
        android:text="Salta (debug)" />
</RelativeLayout>

</ScrollView>