<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/drawer_layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TextView
    	android:id="@+id/tv_title"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:text="@string/title"
    	android:textSize="30sp"/>
    
    <Button
    	android:id="@+id/b_connect"
    	android:layout_below="@id/tv_title"
    	android:layout_marginTop="20dp"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_alignParentRight="true"
    	android:text="@string/btn_foursquare"/>
    	
    <Button
    	android:id="@+id/b_profilo"
    	android:layout_below="@id/b_connect"
    	android:layout_marginTop="30dp"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/btn_profilo"/>
    
	<TextView
		android:id="@+id/tv_name"
		android:layout_below="@id/b_connect"
		android:layout_marginTop="5dp"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_alignParentRight="true"
		android:text=""/>
	
	<Button
        android:id="@+id/b_map"
        android:layout_below="@id/b_profilo"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/load_map"/>
	
	<Button
		android:id="@+id/b_go"
		android:layout_below="@id/b_map"
		android:layout_marginTop="5dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/nearby_venues"/>
		
	<ListView
		android:id="@+id/lv_places"
		android:layout_below="@id/b_go"
		android:layout_marginTop="5dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
		
</RelativeLayout>

    <ListView
       android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"></ListView>

</android.support.v4.widget.DrawerLayout>