<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" 
        android:contentDescription="@string/logo_descr"/>

    <TextView
        android:id="@+id/tv_welcome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="32sp" />
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/ll_rbtn"
        android:orientation="vertical"
        android:layout_below="@id/tv_welcome2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:weightSum="3">
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_regfsq"
            android:text="@string/btn_regfsq"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/customButton"/>
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_regnew"
            android:text="@string/btn_createprofile"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/customButton"/>
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reganon"
            android:text="@string/btnanon"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/customButton"/>
        
    </LinearLayout>

</RelativeLayout>